added ngIfs to product-view.component.html

--- a/ese2020-project-scaffolding-master/frontend/angular.json
+++ b/ese2020-project-scaffolding-master/frontend/angular.json
@@ -123,5 +123,8 @@
       }
     }
   },
-  "defaultProject": "frontend"
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": "53708c7b-2e6c-41d2-b549-8d5086591201"
+  }
 }
